force-app/main/default/objects/Package_Definition__c/Package_Definition__c.object-meta.xml
<CustomObject>
    <label>Package Definition</label>
    <nameField>
        <displayFormat>PD-{0000}</displayFormat>
        <label>Package Definition</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Package Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>