force-app/main/default/objects/Package_Definition__c/fields/Installation_Order__c.field-meta.xml
<CustomField>
    <fullName>Installation_Order__c</fullName>
    <description>The order that this package should be installed during the sequence</description>
    <label>Installation Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>