force-app/main/default/objects/Package_Definition__c/fields/Installation_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Installation_Sequence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The installation sequence to which this package install belongs</description>
    <label>Installation Sequence</label>
    <referenceTo>Installation_Sequence__c</referenceTo>
    <relationshipLabel>Package Definitions</relationshipLabel>
    <relationshipName>Package_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>