force-app/main/default/objects/Package_Definition__c/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <description>Namespace of the package to be installed</description>
    <label>Namespace</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>