force-app/main/default/objects/Package_Definition__c/fields/Package_Version__c.field-meta.xml
<CustomField>
    <fullName>Package_Version__c</fullName>
    <description>Version number of the package to be installed</description>
    <label>Package Version</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>