force-app/main/default/objects/Package_Definition__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Password of the package to be installed (if relevant)</description>
    <label>Password</label>
    <length>128</length>
    <type>Text</type>
</CustomField>